[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Inimigos/ImagemVirus.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Inimigos/Virus.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 21.8186

[sub_resource type="CircleShape2D" id=2]
radius = 24.4537

[sub_resource type="Animation" id=3]
resource_name = "Sumir"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="InimigoVerde" type="KinematicBody2D" groups=[
"Exclusao",
"Inimigo",
]]
scale = Vector2( 0.5, 0.5 )
collision_layer = 768
collision_mask = 768
script = ExtResource( 2 )

[node name="Shape" type="CollisionShape2D" parent="."]
position = Vector2( 0.0141811, 0.153791 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=[
"Exclusao",
"Inimigo",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Sumir = SubResource( 3 )

[node name="TempoDeVida" type="Timer" parent="."]
wait_time = 24.0
one_shot = true
autostart = true

[node name="TempoIntangivel" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_Area2D_area_shape_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="TempoDeVida" to="." method="_on_TempoDeVida_timeout"]
[connection signal="timeout" from="TempoIntangivel" to="." method="_on_TempoIntangivel_timeout"]
